# aube

./: .gitattributes  .rules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  aube.usage.kdl  hk.pkl  mise.toml  release.json
.buildkite/: bootstrap.sh  linux-agent.Dockerfile  pipeline.sh
.github/: actionlint.yaml
.github/workflows/: autofix.yml  bench-pr.yml  bench-refresh.yml  ci.yml  copr-publish.yml  docs.yml  ppa-publish.yml  publish-homebrew.yml  publish-npm.yml  release-plz.yml  release.yml
benchmarks/: bench.sh  generate-results.js  hermetic.bash  pgo.bash  results.json  summarize-results-change.mjs  throttle-proxy.mjs  update-readme.mjs
crates/aube/: CHANGELOG.md  Cargo.toml  build.rs
crates/aube-cli/: Cargo.toml
crates/aube-cli/src/: progress.rs
crates/aube-codes/: CHANGELOG.md
crates/aube-codes/src/: errors.rs  warnings.rs
crates/aube-linker/: CHANGELOG.md  Cargo.toml
crates/aube-linker/src/: builder.rs  hoisted.rs  lib.rs  link.rs  materialize.rs  sys.rs
crates/aube-lockfile/: CHANGELOG.md  Cargo.toml
crates/aube-lockfile/src/: bun.rs  dep_path_filename.rs  graph_hash.rs  io.rs  lib.rs  merge.rs  npm.rs  pnpm.rs  source.rs  yarn.rs
crates/aube-lockfile/src/npm/: layout.rs  mod.rs  raw.rs  read.rs  source.rs  tests.rs  write.rs
crates/aube-lockfile/src/pnpm/: dep_path.rs  format.rs  mod.rs  raw.rs  read.rs  tests.rs  write.rs
crates/aube-lockfile/src/yarn/: berry.rs  classic.rs  mod.rs  tests.rs
crates/aube-lockfile/tests/fixtures/: npm-native.json  pnpm-native.yaml
crates/aube-manifest/: CHANGELOG.md  Cargo.toml
crates/aube-manifest/src/: lib.rs  workspace.rs
crates/aube-registry/: CHANGELOG.md  Cargo.toml
crates/aube-registry/src/: client.rs  config.rs  lib.rs  osv_bloom_client.rs  slow_metadata.rs
crates/aube-resolver/: CHANGELOG.md  Cargo.toml  build.rs
crates/aube-resolver/src/: builder.rs  catalog.rs  direct_dep_info.rs  error.rs  lib.rs  local_source.rs  package_ext.rs  peer_context.rs  platform.rs  primer.rs  primer_schema.rs  resolve.rs  semver_util.rs  tests.rs  trust.rs  types.rs
crates/aube-scripts/: CHANGELOG.md  Cargo.toml
crates/aube-scripts/src/: lib.rs  policy.rs  windows_job.rs
crates/aube-settings/: CHANGELOG.md  Cargo.toml  build.rs  settings.toml
crates/aube-settings/src/: meta.rs  values.rs
crates/aube-store/: CHANGELOG.md  Cargo.toml
crates/aube-store/src/: cas.rs  dirs.rs  git.rs  index.rs  integrity.rs  lib.rs  tarball.rs
crates/aube-util/: CHANGELOG.md  Cargo.toml
crates/aube-util/src/: adaptive.rs  buf.rs  cache.rs  diag.rs  diag_kernel.rs  env.rs  fs_atomic.rs  hash.rs  lib.rs  pkg.rs  url.rs
crates/aube-workspace/: CHANGELOG.md  Cargo.toml
crates/aube-workspace/src/: lib.rs  topo.rs
crates/aube/src/: cli_args.rs  dirs.rs  engines.rs  main.rs  patches.rs  pnpmfile.rs  progress.rs  state.rs  update_check.rs  version.rs
crates/aube/src/commands/: add.rs  add_supply_chain.rs  approve_builds.rs  audit.rs  cache.rs  cat_index.rs  catalogs.rs  check.rs  ci.rs  clean.rs  create.rs  dedupe.rs  deploy.rs  deprecate.rs  deprecations.rs  diag.rs  dist_tag.rs  dlx.rs  doctor.rs  exec.rs  fetch.rs  find_hash.rs  global.rs  ignored_builds.rs  import.rs  init.rs  install.rs  install_test.rs  licenses.rs  link.rs  list.rs  login.rs  logout.rs  mod.rs  npm_fallback.rs  npmrc.rs  outdated.rs  pack.rs  patch.rs  patch_commit.rs  (+19 more)
crates/aube/src/commands/config/: aube_config.rs  delete.rs  get.rs  list.rs  mod.rs  set.rs
crates/aube/src/commands/install/: advisory.rs  args.rs  bin_linking.rs  critical_path.rs  delta.rs  finalize.rs  git_prepare.rs  layout.rs  lifecycle.rs  materialize.rs  mod.rs  resolve.rs  settings.rs  workspace.rs
crates/aube/src/commands/security_scanner_js/: bun_shim.mjs  loader_hook.mjs  runner.mjs
crates/aube/src/progress/: ci.rs  mod.rs  render.rs
crates/aube/tests/: e2e.rs
docs/: benchmarks.data.ts  benchmarks.md  error-codes.data.json  installation.md  pnpm-users.md  security.md  troubleshooting.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: AubeSocialLinks.vue  BenchChart.vue  HomeLanding.vue  custom.css
docs/cli/: add.md  approve-builds.md  audit.md  check.md  ci.md  clean.md  commands.json  config.md  create.md  dedupe.md  deploy.md  deprecate.md  deprecations.md  diag.md  dist-tag.md  dlx.md  doctor.md  exec.md  fetch.md  find-hash.md  index.md  init.md  install.md  licenses.md  link.md  list.md  login.md  logout.md  outdated.md  pack.md  patch-remove.md  patch.md  publish.md  purge.md  query.md  rebuild.md  remove.md  restart.md  run.md  start.md  (+8 more)
docs/cli/config/: delete.md  list.md  set.md
docs/cli/diag/: analyze.md  compare.md
docs/cli/store/: status.md
docs/package-manager/: configuration.md  global-virtual-store.md  lifecycle-scripts.md  node-modules.md  scripts.md  security-scanner.md
docs/settings/: index.md
fixtures/import-bun-messy/: .gitignore  README.md  bunfig.toml  package.json  regenerate-lock.sh
fixtures/import-bun-peer/: package.json
fixtures/vlt-benchmarks/: README.md
licenses/: vltpkg-benchmarks-LICENSE
mise-tasks/test/: bats
npm/: .gitignore  installArchSpecificPackage.js  package.json
npm/scripts/: publish.mjs
packaging/copr/: Dockerfile  build-copr.sh
packaging/homebrew/: render-formula.sh
scripts/: generate-primer.mjs
test/: PNPM_TEST_IMPORT.md  add.bats  allow_builds.bats  approve_builds.bats  audit.bats  check.bats  clean.bats  cli.bats  config.bats  deploy.bats  dlx.bats  doctor.bats  fetch.bats  fetch_settings.bats  git_branch_lockfile.bats  git_deps.bats  global_install.bats  guardrails.bats  import.bats  install.bats  lifecycle_scripts.bats  list.bats  lockfile_dir.bats  multicall_shims.bats  npm_package_lock_platform.bats  optimistic_and_bin_settings.bats  optional_platform.bats  patch.bats  pnpm_install_hooks.bats  pnpm_install_misc.bats  pnpm_monorepo_index.bats  pnpm_savecatalog.bats  pnpm_update.bats  query.bats  rebuild.bats  run.bats  settings.bats  store.bats  update.bats  vlt_benchmarks.bats  (+3 more)
test/registry/: config.yaml
test/test_helper/: common_setup.bash
(+23 files in other folders)
