[workspace]
members = ["crates/*"]
resolver = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[workspace.package]
version = "1.0.0-beta.10"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/endevco/aube"
homepage = "https://github.com/endevco/aube"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
serde_yaml = "0.9"
simd-json = "0.17"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Enum derives (Display/FromStr/etc.)
strum = { version = "0.28", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "charset", "system-proxy"] }

# Hashing
sha1 = "0.10"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# Filesystem
xx = { version = "2", features = ["fslock"] }
reflink-copy = "0.1"
glob = "0.3"
# NTFS junctions (Windows-only) — used for `node_modules` directory
# links so installs work without Developer Mode or admin rights.
# Matches what pnpm does via Node's `fs.symlink(..., 'junction')`.
junction = "1"

# Parallelism
rayon = "1"

# Non-cryptographic FxHash for internal maps keyed on already-signed
# data (package names, dep paths, lockfile keys). Faster than the std
# SipHash default; DoS resistance is unnecessary because the inputs
# come from locked/signed manifests.
rustc-hash = "2"

# Stack-allocated small vectors for lockfile fields that are empty
# or tiny in almost every package. os/cpu/libc arrays, bundled deps.
# Skips a heap alloc per field per package. Adds up fast across
# thousands of LockedPackage values.
smallvec = { version = "1", features = ["serde"] }

# Encoding
base64 = "0.22"

# Sigstore (provenance attestation on `publish`)
sigstore-sign = "0.6"
sigstore-oidc = "0.6"
sigstore-types = "0.6"
# Pinned to an exact `0.0.x` because the crate is pre-1.0 and the `0.0`
# series carries no SemVer compat guarantees — a silent break in OIDC
# detection would disable provenance on every supported CI.
ambient-id = "=0.0.11"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Progress UI
clx = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Archive extraction
flate2 = "1"
tar = "0.4"

# Semver
node-semver = "2"

# Diff/patch
diffy = "0.4"

# Internal crates — `version` is required so `cargo publish` can resolve
# transitive crate dependencies via crates.io. release-plz keeps these
# versions in sync with [workspace.package].version during release PRs.
aube = { path = "crates/aube", version = "1.0.0-beta.10" }
aube-settings = { path = "crates/aube-settings", version = "1.0.0-beta.10" }
aube-resolver = { path = "crates/aube-resolver", version = "1.0.0-beta.10" }
aube-registry = { path = "crates/aube-registry", version = "1.0.0-beta.10" }
aube-store = { path = "crates/aube-store", version = "1.0.0-beta.10" }
aube-linker = { path = "crates/aube-linker", version = "1.0.0-beta.10" }
aube-lockfile = { path = "crates/aube-lockfile", version = "1.0.0-beta.10" }
aube-manifest = { path = "crates/aube-manifest", version = "1.0.0-beta.10" }
aube-scripts = { path = "crates/aube-scripts", version = "1.0.0-beta.10" }
aube-workspace = { path = "crates/aube-workspace", version = "1.0.0-beta.10" }
