[workspace]
members = ["crates/*"]
resolver = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.release-native]
inherits = "release"
lto = "fat"

[profile.release-pgo]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.package]
version = "1.9.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/endevco/aube"
homepage = "https://github.com/endevco/aube"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
yaml_serde = "0.10.4"
# Comment- and format-preserving YAML edits. Used by aube-manifest /
# aube to surgically rewrite user-authored workspace YAML files
# (catalogs, allowBuilds, patchedDependencies) without stripping
# comments — yaml_serde's round-trip would otherwise destroy them.
# yamlpatch's value/parse types come from serde_yaml 0.9, which is the
# upstream of yaml_serde; we keep yaml_serde for typed reads and only
# touch serde_yaml at the patch boundary.
yamlpatch = "1.24"
yamlpath = "1.24"
serde_yaml = "0.9"
simd-json = "0.17"
toml = "0.8"
rkyv = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Enum derives (Display/FromStr/etc.)
strum = { version = "0.28", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "charset", "system-proxy", "gzip", "brotli", "zstd", "hickory-dns"] }

# Hashing
sha1 = "0.10"
sha2 = "0.10"
blake3 = { version = "1", features = ["rayon", "mmap"] }
hex = "0.4"

# Filesystem
xx = { version = "2", features = ["fslock"] }
reflink-copy = "0.1"
glob = "0.3"
# BurntSushi's gitignore matcher (from ripgrep). Used by `aube pack` /
# `aube publish` to honor `.npmignore` / `.gitignore` with full
# semantics (negation, anchoring, globs, **). Already in the build via
# clx → tera → globwalk, so making it a direct dep is essentially free.
ignore = "0.4"
landlock = "0.4"
# NTFS junctions (Windows-only) — used for `node_modules` directory
# links so installs work without Developer Mode or admin rights.
# Matches what pnpm does via Node's `fs.symlink(..., 'junction')`.
junction = "1"

# Parallelism
rayon = "1"

# Non-cryptographic FxHash for internal maps keyed on already-signed
# data (package names, dep paths, lockfile keys). Faster than the std
# SipHash default; DoS resistance is unnecessary because the inputs
# come from locked/signed manifests.
rustc-hash = "2"

# Stack-allocated small vectors for lockfile fields that are empty
# or tiny in almost every package. os/cpu/libc arrays, bundled deps.
# Skips a heap alloc per field per package. Adds up fast across
# thousands of LockedPackage values.
smallvec = { version = "1", features = ["serde"] }

# Encoding
base64 = "0.22"

# Sigstore (provenance attestation on `publish`)
sigstore-sign = "0.6"
sigstore-oidc = "0.6"
sigstore-types = "0.6"
# Pinned to an exact `0.0.x` because the crate is pre-1.0 and the `0.0`
# series carries no SemVer compat guarantees — a silent break in OIDC
# detection would disable provenance on every supported CI.
ambient-id = "=0.0.11"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
libc = "0.2"
seccompiler = "0.5"

# Progress UI
clx = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Archive extraction
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
tar = "0.4"
zstd = { version = "0.13", default-features = false }

# Semver
node-semver = "2"

# Diff/patch
diffy = "0.4"

# Internal crates — `version` is required so `cargo publish` can resolve
# transitive crate dependencies via crates.io. release-plz keeps these
# versions in sync with [workspace.package].version during release PRs.
aube = { path = "crates/aube", version = "1.9.0" }
aube-codes = { path = "crates/aube-codes", version = "1.9.0" }
aube-settings = { path = "crates/aube-settings", version = "1.9.0" }
aube-resolver = { path = "crates/aube-resolver", version = "1.9.0" }
aube-registry = { path = "crates/aube-registry", version = "1.9.0" }
aube-store = { path = "crates/aube-store", version = "1.9.0" }
aube-linker = { path = "crates/aube-linker", version = "1.9.0" }
aube-lockfile = { path = "crates/aube-lockfile", version = "1.9.0" }
aube-manifest = { path = "crates/aube-manifest", version = "1.9.0" }
aube-scripts = { path = "crates/aube-scripts", version = "1.9.0" }
aube-workspace = { path = "crates/aube-workspace", version = "1.9.0" }
aube-util = { path = "crates/aube-util", version = "1.9.0" }

[profile.dev]
debug = 1
