[package]
name = "aube-manifest"
description = "package.json parser for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
include = ["src/**/*.rs"]

[dependencies]
aube-util = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
yaml_serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
