[package]
name = "aube-resolver"
description = "Dependency resolver for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include = ["src/**/*.rs"]

[dependencies]
aube-registry = { workspace = true }
aube-manifest = { workspace = true }
aube-lockfile = { workspace = true }
aube-store = { workspace = true }
node-semver = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
pathdiff = "0.2"
rustc-hash = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
