[package]
name = "aube-scripts"
description = "Lifecycle script runner for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
include = ["src/**/*.rs"]

[dependencies]
# aube-codes is *not* a dep here even though `#[diagnostic(code(ERR_AUBE_X))]`
# attributes appear below. miette treats the `code(...)` argument as an
# identifier token, not a symbol reference, so the codes flow through as
# string literals at macro-expansion time. cargo-machete correctly flags
# the dep as unused. Validation that the names exist in `aube-codes`'s
# registry is a workspace-level concern, not a per-crate one.
aube-manifest = { workspace = true }
aube-util = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }
