[package]
name = "aube-settings"
description = "Settings schema and loader for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
build = "build.rs"
include = ["src/**/*.rs", "build.rs", "settings.toml"]

[[bin]]
name = "generate-settings-docs"
path = "src/bin/generate_settings_docs.rs"

[build-dependencies]
serde = { workspace = true }
toml = { workspace = true }

[dependencies]
yaml_serde = { workspace = true }

[dev-dependencies]
aube-manifest = { workspace = true }
