[package]
name = "aube-store"
description = "Content-addressable global package store for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include = ["src/**/*.rs"]

[dependencies]
aube-util = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
xx = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
