[package]
name = "aube-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared helpers reused across aube crates (semantic hashing, async dedup, atomic filesystem ops, bincode sidecars)."

[dependencies]
rustc-hash = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
