[package]
name = "aube-workspace"
description = "pnpm-workspace.yaml discovery and workspace: protocol resolution for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
include = ["src/**/*.rs"]

[dependencies]
aube-manifest = { workspace = true }
glob = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
